# TensorRT_learn

./: enter_docker.sh
.claude/: settings.json
OpenMMLab_test/ch04/: asinh.onnx  asinh_export_onnx.py  dcn.onnx  deformConv2d_export_onnx.py  run_asinh_onnx.py
OpenMMLab_test/ch04/custom_op/: my_add.cpp  my_add.py  readme.md
OpenMMLab_test/ch05/: gen_onnx.py  info_onnx.py  modify_onnx.py  run_onnx.py
OpenMMLab_test/ch05/extract_submodel/: debug_model_1.onnx  debug_model_2.onnx  debug_model_3.onnx  debug_model_4.onnx  extract_submodel.py  gen_father_model.py  more_output_model.onnx  partial_model.onnx  submodel_1.onnx  submodel_2.onnx  submodel_3.onnx  test_weight.py  whole_model.onnx
OpenMMLab_test/ch06/: after_debug.onnx  before_debug.onnx  debug_tool.py  test_debug.py
OpenMMLab_test/ch07/: readme.md
OpenMMLab_test/ch07/c++_build/: CMakeLists.txt  convert_build.cpp  direct_build.cpp  model.onnx  model_compare.cpp  model_infer.cpp
OpenMMLab_test/ch07/python_build/: direct_build.py  gen_onnx.py  model_python_trt.engine
OpenMMLab_test/ch08/: gen_onnx.py  srcnn3.onnx
OpenMMLab_test/ch08/backend_ops/tensorrt/: CMakeLists.txt  readme.md  view_custom.py  view_custom2.py
OpenMMLab_test/ch08/backend_ops/tensorrt/common/: trt_plugin_helper.hpp
OpenMMLab_test/ch08/backend_ops/tensorrt/common_impl/: trt_cuda_helper.cu
OpenMMLab_test/ch08/backend_ops/tensorrt/dynamic_resize/: trt_dynamic_resize.hpp
OpenMMLab_test/ch08/backend_ops/tensorrt/gather_topk/: gather_topk.cpp
OpenMMLab_test/ch08/backend_ops/tensorrt/grid_sampler/: trt_grid_sampler.cpp
OpenMMLab_test/ch08/onnx_custom_plugin/: CMakeLists.txt  build.sh
OpenMMLab_test/ch08/onnx_custom_plugin/common/: sampleEngines.cpp
OpenMMLab_test/ch08/srcnn_converter/: CMakeLists.txt  build.sh  readme.md  srcnn_converter.cpp
OpenMMLab_test/ch09/: attention_engine.trt  benchmark_attention.sh  benchmark_attention_v8.sh  check_engine.py  check_inputs.py  compare.py  generate_onnx.py  output.json  output_8.json  readme.md  run_inference.py  run_trtexec.sh  test_attention.py  test_engine.py
data/occ/: occ_float_compile.txt
docker/: launch.sh  ubuntu-22.04.Dockerfile
onnx_models/: attention_v1.onnx  model_description.txt
samples/trtexec/: trtexec.cpp
